--- a/vercel.json
+++ b/vercel.json
@@ -3,4 +3,21 @@
       { "source": "/generator.html", "destination": "/generator.html" }
     ]
   }
+
   
+{
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": ""
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    { "source": "/generator.html", "destination": "/generator.html" }
+  ]
+}
